Web Inspector: Should be able to push nodes in an iframe subtree to the frontend https://bugs.webkit.org/show_bug.cgi?id=169086

Reviewed by Joseph Pecoraro.

Source/WebCore:

Test: inspector/dom/push-node-by-path-to-frontend.html

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::nodeForPath):
During top-down document traversal, descend into content document nodes
when visiting an HTMLFrameOwnerElement.

Source/WebInspectorUI:

* UserInterface/Views/DOMTreeContentView.js:
(WebInspector.DOMTreeContentView.prototype._selectedNodeDidChange):
Use the URL of the main frame instead of the content frame URL.

LayoutTests:

Added test coverage for DOMTreeManager.prototype.pushNodeByPathToFrontend,
which now supports pushing iframe document nodes (#document) and their descendants.

* inspector/dom/push-node-by-path-to-frontend-expected.txt: Added.
* inspector/dom/push-node-by-path-to-frontend.html: Added.
* inspector/dom/resources/frameset-frame.html: Added.
* inspector/dom/resources/frameset-iframe.html: Added.


Canonical link: https://commits.webkit.org/186137@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213353 268f45cc-cd09-0410-ab3c-d52691b4dbfc